Fixed some layout issues in admin-layerselector

--- a/applications/parcel/scss/portal.scss
+++ b/applications/parcel/scss/portal.scss
@@ -1123,7 +1123,6 @@ footer {
 }
 
 input[type="text"], input[type="password"], input[type="search"] {
-	color: $baseTextColor;
 	padding: 8px 35px 8px 10px;
 	@include border-radius(4px);
 	border: solid 1px #b7b7b7;
@@ -1131,7 +1130,6 @@ input[type="text"], input[type="password"], input[type="search"] {
 }
 
 textarea {
-	color: $baseTextColor;
 	@include border-radius(4px);
 	border: solid 1px #b7b7b7;
 	@include box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
